# Enigma-AIAgent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_live.py
enigma_reason/: __init__.py  config.py  main.py
enigma_reason/adapters/: __init__.py  auth.py  base.py  network.py  registry.py  unsw_threat.py  video.py
enigma_reason/api/: __init__.py  analyze.py  dependencies.py  ws_dashboard.py  ws_decisions.py  ws_raw_signal.py  ws_signal.py  ws_signals.py
enigma_reason/core/: __init__.py  graph.py  reasoning_engine.py
enigma_reason/domain/: __init__.py  enums.py  explanation.py  hypothesis.py  reasoning.py  signal.py  situation.py  temporal.py
enigma_reason/explain/: __init__.py  builder.py  formatter.py
enigma_reason/foundation/: __init__.py  clock.py  identifiers.py
enigma_reason/graph/: __init__.py  builder.py  nodes.py  runner.py  state.py
enigma_reason/models/: __init__.py  decision.py  signal.py  state.py
enigma_reason/services/: __init__.py  connection_manager.py
enigma_reason/store/: __init__.py  correlation.py  situation_store.py
tests/: __init__.py  test_adapters.py  test_explanation.py  test_graph.py  test_models.py  test_reasoning.py  test_signal.py  test_situation.py  test_store.py  test_temporal.py
