[project]
name = "enigma-reason"
version = "0.1.0"
description = "Agentic reasoning layer — Phase 1: Situation Memory & Signal Grounding"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "websockets>=12.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
